--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
             Data used in this project contains average data for 2017 automobile manufacturers. It can be downloaded from https://flunky.github.io/cars2017.csv.
             Visualization provides a good insight for fuel effiency.
           <h3>1. Hybrid Structure</h3>
-            The Visualization follows the Martini Glass hybrid structure. Initial 3 scenses provides insight for different kind of fuels and the last one contains all data.
+            The Visualization follows the Martini Glass hybrid structure. Initial 3 scenes provides insight for different kind of fuels and the last one contains all data.
           <h3>2. Scenes</h3>
-            Consecutive scenes reflecting the effeciency per fuel in order - Gasoline, Diesel, Electricity. Last scene has no filters and contains all data.
+            Consecutive scenes reflecting the effeciency per fuel in order - Gasoline, Diesel, Electricity. Last scene has no filters and contains all the data for exploration.
           <h3>3. Annotations</h3>
             Paragraphs and tool tips provides the Annotations.
           <h3>4. Parameters</h3>
@@ -228,7 +228,7 @@
 
         <div id="AllEfficiency" class="mySlides" style="width:100%">
           <h2> Automobiles Efficiency </h2>
-          <p> Clearly Electric Automobiles are the most effecient. Diesel automoniles are generally effecient. Gasoline are more effecient for 3 or 4 engines.
+          <p> Clearly Electric Automobiles are the most efficient. Diesel automoniles are generally efficient. Gasoline are more efficient for 3 or 4 engines.
           </p>
         </div>
 
